--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -6,21 +6,16 @@ on:
       - Master
 
 jobs:
-  build:
-
+  Start_test:
     runs-on: ubuntu-20.04
-
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 18
+      with:
+        fetch-depth: 0
     - uses: actions/setup-java@v3
       with:
-        java-version: '18'
         distribution: 'temurin'
-        cache: maven
+        java-version: '17'
+        cache: 'maven'
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-    - uses: ashley-taylor/junit-report-annotations-action@1.3
-      if: always()
-      with:
-        access-token: ${{ secrets.GITHUB_TOKEN }}
